# yaate

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml
aied/: __init__.py  ai.py  editor.py  main.py
yaate/: ai.py  detector.py  editor.py  main.py
