[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aied"
version = "0.1.0"
description = "AI-assisted CLI editor powered by Gemini"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "prompt-toolkit>=3.0",
    "pygments>=2.17",
    "rich>=13.0",
    "google-generativeai>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
aied = "aied.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aied*"]
