[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaate"
version = "0.1.0"
description = "Yet Another AI-assisted text editor powered by Gemini"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "pygments>=2.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
yaate = "yaate.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yaate*"]
